--- a/index.html
+++ b/index.html
@@ -26,20 +26,26 @@
 </head>
 <body>
   <h1 style="color: maroon">Different ways of writing CSS</h1>  
-  <p>Internal CSS</p>
-  <p>Inline CSS</p>
-  <p>External CSS</p>
-  <div>
+  <p id="name-1">Internal CSS</p>
+  <p class="one">Inline CSS</p>
+  <p class="one">External CSS</p>
+  <div class="new old pure">
     <h3>CSS syntax
     </h3>
   </div>
-  <ul style="color: green; text-align: center; list-style: none;">
-    <li>Selector</li>
-    <li>Cali brackets</li>
-    <li>Property</li>
+  <ul>
+    <li class="list-1">Selector</li>
+    <li class="list-2">Cali brackets</li>
+    <li class="list-3">Property</li>
     <li>Full colon</li>
     <li>Value</li>
-    <li>Semi colon</li>
+    <li class="list-6">Semi colon</li>
   </ul>
+  <a href="#" class="Home">Home</a>
+  <a href="#" class="About">About</a>
+  <a href="#" class="Services">Services</a>
+  <a href="#" class="Contact">Contact</a> <hr style="size: 10px; color: brown"><br>
+  <img src="./IMG20211005190944.jpg" style="width: 100px; height: 100px">
+  <img src="./IMG_20220718_164441.jpg" style="width: 100px; height: 100px">
 </body>
 </html>
