more css-styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>internal css</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nanum+Pen+Script&family=Satisfy&family=Secular+One&display=swap" rel="stylesheet">
     <style>
         h1{
             color: blue;
@@ -16,7 +19,8 @@
             color: red;
         }
         div{
-            background-color: purple;
+          
+          background-color: blueviolet;
         }
         h3{
             font-size: 70px;
@@ -33,6 +37,7 @@
     <h3>CSS syntax
     </h3>
   </div>
+  <div class="container">
   <ul>
     <li class="list-1">Selector</li>
     <li class="list-2">Cali brackets</li>
@@ -41,11 +46,42 @@
     <li>Value</li>
     <li class="list-6">Semi colon</li>
   </ul>
+</div>
+<div class="gradient">
+
+</div>
   <a href="#" class="Home">Home</a>
   <a href="#" class="About">About</a>
   <a href="#" class="Services">Services</a>
   <a href="#" class="Contact">Contact</a> <hr style="size: 10px; color: brown"><br>
-  <img src="./IMG20211005190944.jpg" style="width: 100px; height: 100px">
-  <img src="./IMG_20220718_164441.jpg" style="width: 100px; height: 100px">
+  <hr size="3" color:"yellow">
+  <!--creating tables in HTML-->
+  <table>
+    <thead>
+      <tr>
+        <th>GENDER</th>
+        <th>AGE</th>
+        <tr>
+        </thead>
+        <tbody>
+          <td>female</td>
+          <td>13y</td>
+        </tr>
+        <tr>
+          <td>male</td>
+          <td>65y</td>
+        </tr>
+        <tr>
+          <td>queer</td>
+          <td>30y</td>
+        <tr>
+          <td>gay</td>
+          <td>25y</td>
+        </tr>
+      </tr>
+    </tbody>
+  </table>
+  <img src="./IMG20211005190944.jpg" class="image-1" alt="" style="width: 100px; height: 100px">
+  <img src="./IMG_20220718_164441.jpg" class="image-2" alt="" style="width: 100px; height: 100px">
 </body>
 </html>
